==================== 2.17.5 ====================

2006-12-18  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation.

2006-12-18  Ales Nyakhaychyk  <nab@mail.by>

	* be.po: Updated Belarusian Translation by Ihar Hrachyshka.

==================== 2.17.2 ====================

2006-11-6  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation.

2006-10-30  Djihed Afifi <djihed@gmail.com> 

	* ar.po Updated Arabic Translation.

2006-10-15  Francisco Javier F. Serrador  <serrador@openshine.com>

	* eo.po: Updated Esperanto translation by Guillaume Savaton.
	* LJNGUAS: Added eo 

==================== 2.16.1 ====================

2006-09-28  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Updated Italian translation by
	Francesco Marletta <francesco.marletta @ tiscali.it>.

2006-09-10  David Lodge <dave@cirt.net>

	* en_GB.po: Updated English (British) translation.

2006-09-04  Vincent Untz  <vuntz@gnome.org>

	* .cvsignore: add stamp-it

==================== 2.16.0 ====================

2006-09-01  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Updated Macedonian translation.

2006-88-29  Rahul Bhalerao  <b.rahul.pm@gmail.com>

	* mr.po: Updated Marathi translation.
	
2006-08-16  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2006-08-15  Sanlig Badrak  <badral@openmn.org>

        * mn.po: Added Mongolian translation.

2006-08-13  Matic Žgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation.

2006-08-09  Baris Cicek <baris@teamforce.name.tr>

	* tr.po: Updated Turkish Translation from Onur Can Cakmak

==================== 2.15.91 ====================

2006-08-02  Runa Bhattacharjee <runabh@gmail.com>

	* bn_IN.po: Updated Bengali India Translation.

2006-08-01  Jovan Naumovski  <jovan@lugola.net>

	* mk.po: Updated/fixed Macedonian translation.

2006-07-30 Arangel Angov <ufo@linux.net.mk>

	* sl.po: Added Slovenian translation.

2006-07-26  Francisco Javier F. Serrador  <serrador@openshine.com>
