@@ -8,13 +8,18 @@ desktop-directories/Development.directory.in
 desktop-directories/Education.directory.in
 desktop-directories/Games.directory.in
 desktop-directories/Graphics.directory.in
+desktop-directories/Hardware.directory.in
+desktop-directories/InternetAndNetwork.directory.in
 desktop-directories/Internet.directory.in
+desktop-directories/LookAndFeel.directory.in
 desktop-directories/Multimedia.directory.in
 desktop-directories/Office.directory.in
 desktop-directories/Other.directory.in
+desktop-directories/Personal.directory.in
 desktop-directories/Preferences.directory.in
 desktop-directories/Settings-Accessibility.directory.in
 desktop-directories/Settings.directory.in
+desktop-directories/System.directory.in
 desktop-directories/System-Settings.directory.in
 desktop-directories/System-Tools.directory.in
 simple-editor/gmenu-simple-editor.desktop.in
