@@ -1,3 +1,8 @@
+2007-01-12  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po: Updated Swedish translation.
+	* POTFILES.in: Added 5 missing files.
+
 ==================== 2.17.5 ====================
 
 2006-12-18  Djihed Afifi <djihed@gmail.com> 
